version/3.0/ripscrip/1.4-terminal-ansi-view.md
# 1.4 Terminal & ANSI View

[◀ Prev: 1.3 World View & Virtual Canvas](1.3-world-view-virtual-canvas.md) · [Contents](README.md) · [Next: 2.0 Color Modes & Palettes ▶](2.0-color-modes-and-palettes.md)

_Reconstructed edition - every claim carries an evidence tag; see [Contents](README.md) for the legend._

[Text windows](../../GLOSSARY.md) - the virtual TTY regions that display all non-RIPscrip (ASCII/ANSI) data - and the commands that define, switch, position within, and erase them.

_Content is [CP437](../../GLOSSARY.md) text rendered from the client's own MicroANSI fonts, with ANSI and VT-102 screen control - the emulation baseline is the [ANSI/VT support reference](../../baseline/techspecs/ansi-vt-support.md)._

_Where 1.54 had a single text window ([1.4 in the v1.54 reference](../../1.54/ripscrip/1.4-terminal-ansi-view.md)), 2.0/3.x allows up to 36, one current at a time._

> **Editor's note - sources for this page:** the ALPHA 4 draft's own discussion of text windows and terminal emulations was an unfinished `[BEGIN REWORD]` placeholder (preserved verbatim in the [2.0 page](../../2.0/ripscrip/1.4-terminal-ansi-view.md#text-windows-and-terminal-emulation-protocols)). The model below therefore combines the draft's completed command entries with what the 3.x evidence - RIPSCRIP.HLP strings and the RIPtel corpus - shows of the shipping behavior.

## Text Windows and Terminal Emulation

_Evidence: 2.00a4; HLP; corpus._

A text window is a screen region where raw (non-RIPscrip) text is routed, with ANSI and VT-102 emulation: colors, cursor movement, scrolling margins, wrap/chop. Up to 36 text windows are defined in the text window [data table](7.1-data-tables.md); the default is full-screen 80×25. A deactivated current window silently discards incoming text - the demos lean on `$DTW$` (deactivate text window) constantly to keep stray host text off their graphics.

The 3.0.7 driver's strings confirm a richer text-window model than the draft documents: row/column positions, wrap/chop designator, domain designator, text metric mode (`RIP_TextMetric` is in the inventory), write mode, and article/column bindings into the flowed-text system ("Invalid text article number", "Invalid text column number" - see [3.1 Column Text System](3.1-column-text-system.md)). _Evidence: HLP._

## MicroANSI Fonts (`.maf`)

_Evidence: HLP (file headers)._

Terminal text is rendered from **MicroANSI** bitmap fonts shipped as `RIPscrip.maf` - header `RIPterm v2.0 MicroANSI Font File`. The format is inherited directly from RIPterm Professional 2.0, whose `RIPTERM.FNT` (preserved in the [2.x font assets](../../2.0/assets/fonts/README.md)) carries the identical header; RIPterm 2.0 additionally ran EGA 640×350 as a native video mode. RIPtel still supports 640×350 - as the default world view, for 1.54 compatibility - but treats it like any other world resolution, scaled to the display, so it needs no 350-line MicroANSI table of its own. The file carries per-resolution tables for **three display resolutions** - 640×480, 800×600, and 1024×768 - each with about five font-size subtables, so text windows keep proportion as the device resolution changes. (Text-mode geometries offered by RIPtel: 80×43, 91×43, 80×25, 91×25, 40×25.) Byte-level format details are in the [MicroANSI `.maf` techspec](../techspecs/3.3-microansi-maf-delta.md). Graphical text uses the separate font systems: BGI stroked `.CHR` vector fonts and the `.RFF` outline fonts of RIP_EXTENDED_FONT_STYLE, covered in [3.0 Text Output & Fonts](3.0-text-output-and-fonts.md).

## RIP_TEXT_WINDOW

_Evidence: 2.00a4; HLP (`RIP_TextWindow`; the five MicroANSI text modes 80x43/91x43/80x25/91x25/40x25 appear in MESSAGES.HLP); corpus (14 uses in 14 files); SyncTERM (ripper.c:14783)._

_Define the size and location of the Text Window_

|               |                                         |
| ------------- | --------------------------------------- |
| **Level**     | 0                                       |
| **Command**   | `w`                                     |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY wrap:1 size:1` |

**Format:** `!|w <x0> <y0> <x1> <y1> <wrap> <size>` **Example:** `!|w00001B0M10`

**Attributes used:** Base Math (current setting)

This command specifies the dimensions of the virtual TTY window that will display all ASCII/ANSI (non-RIPscrip) data coming across the connection. (x0,y0) defines the upper-left corner of the window in text-based character-cell coordinates. (x1,y1) defines the lower-right corner of the window (inclusive). There may be two simultaneous windows on the screen, one for TTY text, and one for the display of RIPscrip graphics (a viewport), and they may overlap.

Bytes received over the modem are first checked for RIPscrip commands. All bytes that don't conform to the RIPscrip syntax are treated as ANSI/ASCII and displayed in the TTY window (if defined). User keystrokes that are echoed by the BBS would also appear in the text window by this scheme.

### Font sizes

The text window may be deactivated, ignoring all non-RIPscrip bytes, by setting all RIP_TEXT_WINDOW parameters to zero (0). The X and Y parameters' ranges vary depending on the setting of the `<size>` parameter which governs the font size used for the output text. Valid settings for the `<size>` parameter and the ranges for X/Y values are as follows:

| Size | Font Size (\*) | X Range | Y Range | Columns | Rows |
| ---- | -------------- | ------- | ------- | ------- | ---- |
| 0    | 8x8            | 0-79    | 0-42    | 80      | 43   |
| 1    | 7x8            | 0-90    | 0-42    | 91      | 43   |
| 2    | 8x14           | 0-79    | 0-24    | 80      | 25   |
| 3    | 7x14           | 0-90    | 0-24    | 91      | 25   |
| 4    | 16x14          | 0-39    | 0-24    | 40      | 25   |

(\*) Font sizes are based on a 640x350 device resolution

The font sizes in the preceding table vary depending on the resolution that the terminal software is running under. The actual cell sizes of each font are calculated based on the number of rows and columns required. For example, at a resolution of 800x600, the cell sizes are calculated by dividing the horizontal resolution by the number of columns (800/80) which yields a cell width of 10. By doing the same thing for the same height we get 600/43 which equals 13.95348837. You obviously cannot have a fractional cell size so we round down. This gives us a cell height of 13. This gives a vertical region of 559 scan lines of text information yielding 41 extra scan lines that don't get used. This method can be used to determine the cell sizes for any arbitrary resolution. _(v2.A3)_

### Text window placement

Now that we know what the font cell sizes are, or more acurately, how to calculate them, we need to establish a standardized way to determine screen placement for text characters. RIPscrip 1.54 was based on 640x350 resolution and text placement was very straightforward. If the text window was to be defined using font #2 (8x14 under 640x350) and was to be from (10,15) to (20,25) in text coordinates, then our actual upper-left corner of the text window would be located at pixel (10x8,15x14) or (80,210). Now that we have the upper-left corner of the text window, calculating an arbitrary row/column in the text window is simple based on the cell size. _(v2.A3)_

Under resolutions other than 640x350, we need to take very special care to make the text characters appear as close to the 640x350 counterparts as possible. In order to calculate the text window's orientation as closely as possible in other resolutions, calculate the upper-left corner of the text window at 640x350 coordinates and scale those coordinates up to the actual resolution used on the terminal. This will insure that the text window is located as closely to the 640x350 counterpart as possible. As previously described, the font cell sizes can leave some "slop space" due to fractional columns/rows. This means that you cannot be pixel-for-pixel accurate with text window placement at varying resolutions. In this matter, the RIP_TEXT_WINDOW command is not truly resolution independent (see [RIP_EXTENDED_TEXT_WINDOW](#rip_extended_text_window) for a truly resolution independent way of creating text windows).

The `<wrap>` parameter applies to the horizontal dimension. If `<wrap>` is set to 1, then any text that extends beyond the right margin of the window will wrap to the next line of the window, scrolling the window up if necessary. If `<wrap>` is 0, then any text going beyond the right margin is truncated and no scrolling is performed; the cursor remains at the right margin.

When a text window is defined, its coordinates are relative to the actual screen, not the current graphical Viewport or the Device Coordinate Frame.

**NOTE:** If the text window currently being defined is identical to the currently defined text window, the cursor will not be relocated to the upper-left corner of the window. The only aspect of the text window that can be different and still be deemed "identical" is the `<wrap>` parameter. For the current and new text windows to be considered identical, the parameters `<x0>`, `<y0>`, `<x1>`, `<y1>` and `<size>` must be the same.

**NOTE:** A text window definition command is ignored if the current text window data table entry is protected! _(v2.A4)_

All 14 corpus uses set every parameter to zero (`!|w0000000000`) - TeleGrafix's own demos use the command purely to **deactivate** the text window before full-screen graphics, or define minimal windows for status text. _Evidence: corpus._

## RIP_EXTENDED_TEXT_WINDOW

_Added in RIPscrip v2.A4._

_Evidence: 2.00a4; HLP (`RIP_ExtendedTextWindow`, plus `$ISEXTWIN$` variable); SyncTERM (ripper.c:14255, descriptor `2#2#2#2#2#2#1#4#`) - not observed in the RIPtel demo corpus._

_Define a resolution independent text window_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `b` |
| **Arguments** | `x0:XY y0:XY x1:XY y1:XY width:2 height:2 font_no:1 flags:4 reserved:3` |

**Format:** `!|b <x0> <y0> <x1> <y0> <width> <height> <font_no> <flags> <reserved>` **Example:** `!|b0000ZKQO280P2000H000`

**Attributes used:** Base Math (current setting)

_[Editor's note: the ALPHA 4 draft assigned this letter `b` while **also** assigning `b` to [RIP_SET_BASE_MATH](1.2-math-and-coordinates.md#rip_set_base_math) - an outright collision in the draft. The RIPtel corpus resolves it: the shipping 3.0 driver moved SET_BASE_MATH to the wire opcode `J`, leaving `b` to the extended text window, exactly as SyncTERM's descriptor table also has it.]_

This RIPscrip command is a more sophisticated way of defining a text window than by using the older [RIP_TEXT_WINDOW](#rip_text_window) command. The older command doesn't permit you the luxury of creating a truly resolution independent text window - this command does and is far superior in design to the older RIPscrip 1.xx RIP_TEXT_WINDOW command. If at all possible, you should use this command instead of the older command as it provides more flexibility and more methods of interfacing with the text window via text variable query statements.

This version of a text window works by establishing a bounding rectangle that is to contain the actual text window display region. This bounding rectangle is specified just like you would in drawing a filled rectangle, by indicating the upper-left X/Y coordinates and the lower-right X/Y coordinates of the bounding rectangle. Note that the lower-right corner of the bounding rectangle is non-inclusive to the bounding rectangle region, just like with filled rectangles. See ["The Mathematics of Graphics and Coordinates"](1.2-math-and-coordinates.md#the-mathematics-of-graphics-and-coordinates) for more detailed information on this subject and why it is important.

### Fitting the Text Window

Once a bounding rectangle is established, you indicate how many columns wide and how many lines tall you wish your text window to be, and also indicate the desired text font you wish to use for your window. The RIPscrip software will take your desired width, height and text font into consideration and determine if it can fit a text window inside your bounding rectangle with this font's dimensions. If it can make a text window exactly the width and height of your request, it does so - centering the text window inside the bounding rectangle as in the following diagram:

```text
╔═════════════════════════════════════════════════╗
║                                                 ║
║    ╔═══════════════════════════════╗            ║
║    ║                               ║            ║
║    ║    ╔╤╤╤╤╤╤╤╤╤╤╤╤╤╤╤╤╤╤╤╤╤╗    ║            ║
║    ║    ╟┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼╢    ║            ║
║    ║    ╟┼Text window display┼╢    ║            ║
║    ║    ╟┼┼┼┼┼┼rectangle┼┼┼┼┼┼╢    ║            ║
║    ║    ╟┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼╢    ║            ║
║    ║    ╟┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼┼╢    ║            ║
║    ║    ╚╧╧╧╧╧╧╧╧╧╧╧╧╧╧╧╧╧╧╧╧╧╝    ║            ║
║    ║                               ║            ║
║    ╚═══════════════════════════════╝            ║
║     Text window bounding rectangle              ║
║                                                 ║
╚═════════════════════════════════════════════════╝
                   Graphics Screen
```

If the font number provided would make either the width or height of the text window "too large" to fit inside the bounding rectangle, then several things may happen (in the following order):

1. The font number is checked. If a narrower or shorter font is available in the RIPscrip text window system, it will be chosen, then everything will be recalculated to see if the width and/or height can now be fit inside the bounding rectangle. If it can, then this new font will be used to accomodate the request. This evaluation process is incremental in nature. If the width and/or height is too large, then the next smaller font is checked, so on and so forth. Here is the table of fonts, their row/column sizes, and which font number will be checked if the width or the height (or both) is out of range for the given bounding rectangle:

   | Font | Columns | Rows | Shrink Width | Shrink Height | Shrink Both |
   | ---- | ------- | ---- | ------------ | ------------- | ----------- |
   | 0    | 80      | 43   | 1            | n/a           | n/a         |
   | 1    | 91      | 43   | n/a          | n/a           | n/a         |
   | 2    | 80      | 25   | 3            | 0             | 1           |
   | 3    | 91      | 25   | n/a          | 1             | n/a         |
   | 4    | 40      | 25   | 2            | 0             | 0           |

   If a new font must be chosen, then you evaluate whether you need to shrink the font in the width, height or in both directions. Consult the preceding table to determine which font number to check next. If the entry specifies "n/a", then you cannot shrink the font any further and must move on to step number 2 (see below).

2. If you have moved down to the smallest font and you still cannot obtain the desired height and width of your text window, you have no alternative then to reduce the width and/or height to make it fit inside the bounding rectangle. This is a last resort situation, but must be done if the text window is to fit inside the bounding rectangle. If the width is too wide, then one column will be trimmed off of the text window and then its new pixel width would be evaluated. If it still doesn't fit, you keep removing more columns, one-by-one, until you either get a window that fits, or you hit zero columns. If your bounding rectangle is so small that you can't have even a one column wide or one line tall text window then the text window is made exactly one line tall, or one column wide to accomodate the situation and the bounding box is adjusted accordingly to fit exactly the outer dimensions of the newly defined text window (albeit an incorrect one).

When the text window is actually defined, the cursor is placed in the upper-left corner (0,0) and any ANSI/VT-102 attributes are reset to normal defaults. The vertical scrolling margin for the text window defined in ANSI/VT-102 is set to the full height of the text window. The colors are set to light-gray text on a black background (low intensity white on black - standard ANSI colors).

### Flags

The `<flags>` parameter of this command allows you to specify some extra options to control how the text window is defined and how it will operate. The available flags, which must be OR'ed togther to create a final flags "value", are as follows:

| Flag | Description |
| --- | --- |
| 1 | Enable character-wrap. If this flag is not present, then "chop" mode is in use. See the RIP_TEXT_WINDOW command for more details on this mode of text window operation. |
| 2 | Disable the cursor immediately (as if a `$COFF$` text variable were processed). This hides the cursor immediately when the text window is created (see flag 16 for more on this). This doesn't mean that text won't be displayed, it only means that you won't see a cursor in the text window when it is current and active. |
| 4 | Deactivate the text window immediately upon creation. This acts as if immediately after defining the text window, a `$DTW$` text variable command were issued. Any raw text received by the terminal would not be displayed in this text window if it is the current one. When deactivated, the cursor for this text window is hidden and any text variables requesting information about this text window will return a result indicating that the text window is deactivated. Note, that the `$INUSE(TW)$` text variable will still respond that this text window is "in use", even though it is deactivated. |
| 8 | Ignore the font number parameter. This flag gives the text window definition software the task of finding the best font to use for the text window. This alleviates the coder from having to determine the proper font to use. This makes life a bit easier in choosing fonts. |
| 16 | Erase the text window immediately after it is created. This erases the contents of the entire bounding rectangle, not just the text window display area! The area is erased to color #0 (which is typically black). This operation is performed before the text window's cursor is displayed (if it is displayed at all based on flag 2), and before the text window can possibly be deactivated (via flag 4). |
| 32 | The text window is protected immediately after it is created. |

It should be noted that there are some fundamental differences in nature from the extended text window command and the older normal text window command. This one is obviously more powerful and has the benefit of being resolution independent. When working with [text variables](5.1-text-variables.md) to query the status or configuration of text windows, some text variables cannot query particular pieces of information about extended text windows (eg, `$TWX0$`, `$TWY0$`, `$TWX1$` and `$TWY1$`). The types of information that cannot be obtained are the text cell coordinates of the upper-left and lower-right corners of the extended text window - there aren't any - they're specified in graphical coordinates, not in text coordinates like with the RIP_TEXT_WINDOW command. The `$ISEXTWIN$` variable reports whether a given window is an extended one. See these text variables for more details about this kind of situation.

> **NOTE:** A text window definition command is ignored if the current text window data table entry is protected!
>
> The `<reserved>` parameter is reserved for future use in RIPscrip and should be set to "000" for compatibility with future releases of RIPscrip.

## RIP_SWITCH_TEXT_WINDOW

_Added in RIPscrip v2.A0._

_Evidence: 2.00a4; HLP (`RIP_SwitchTextWindow`; "Cannot protect current text window slot when it is #0", `$STW$`/`$RTW$`/`$TWIN$` variables) - not observed in the RIPtel demo corpus, not in SyncTERM._

_Switch to another Text Window (activate)_

|               |                      |
| ------------- | -------------------- |
| **Level**     | 2                    |
| **Command**   | `T`                  |
| **Arguments** | `window_num:1 res:1` |

**Format:** `!|2T <window_num> <res>` **Example:** `!|2T30`

**Attributes used:** Base Math (current setting)

In RIPscrip, you are allowed to have up to 36 separate text windows on screen simultaneously (0-9, A-Z). These windows maintain their own "current ANSI attributes", cursor position, text window dimensions/location, cursor ON/OFF status and whether the window is actived or deactivated.

When you switch to another window, if that window hasn't been defined yet, then the current window definition is copied to the new window slot. When you switch to another window, the cursor is hidden in the previous window and re-drawn in the new window (if it was visible the last time the window was used).

If you switch to a window that is "deactivated", it will hide the cursor from whatever window was previously active and then execute the proper deactivate text window sequence for the newly selected text window slot. _(v2.A4)_

When a [RIP_RESET_WINDOWS](1.3-world-view-virtual-canvas.md#rip_reset_windows) command is acted upon, any previously defined text window slots are erased and Window #0 is set to full screen mode (using the User's selected MicroANSI font), and the current window number is set to window #0.

The graphics-only demos deactivate their single text window and never switch. _Evidence: corpus._

## RIP_ERASE_WINDOW

_Evidence: 2.00a4; HLP (`RIP_EraseWindow`, plus `$ETW$` variable); SyncTERM (ripper.c:14388) - not observed in the RIPtel demo corpus._

_Clears Text Window to current background color_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `e`      |
| **Arguments** | `<none>` |

**Format:** `!|e` **Example:** `!|e`

**Attributes used:** Base Math (N/A)

This clears the TTY text window to the current graphics background color (color #0) and positions the cursor in the upper-left corner of the window. _(v2.A4)_

The area that is erased is actually the bounding rectangle of the text window, not only the display region inside the bounding rectangle. This is different than ANSI commands which erase the text window to a certain color. ANSI/VT-102 commands only erase the display region, not the entire bounding rectangle. _(v2.A4)_

If the text window is not in use or deactivated, then this command is ignored. If the text window and any viewports overlap, then this command will clear the overlapping viewport(s) also. _(v2.A4)_

The demos typically deactivate the text window outright (`$DTW$`, or `!|w0000000000`) rather than erase it. _Evidence: corpus._

## RIP_GOTOXY

_Evidence: 2.00a4; HLP (`RIP_GotoXY`, plus `$TWGOTO$` variable); SyncTERM (ripper.c:14428) - not observed in the RIPtel demo corpus._

_Move text cursor to row & column in Text Window_

|               |           |
| ------------- | --------- |
| **Level**     | 0         |
| **Command**   | `g`       |
| **Arguments** | `x:2 y:2` |

**Format:** `!|g <x> <y>` **Example:** `!|g0509`

**Attributes used:** Port, Base Math (current setting)

This command sets the position of the text cursor in the TTY Text window, if it is active. If inactive (if the dimensions are 0,0,0,0), then this command is ignored. This command is equivalent to the ANSI/VT-100 command goto x/y, `<Esc>[x;yH`, except that the coordinates of that ANSI command are 1-based and the coordinates of this RIPscrip command are 0-based.

The graphics-only demos keep their text windows deactivated and never need it. _Evidence: corpus._

## RIP_HOME

_Evidence: 2.00a4; HLP (`RIP_Home`, plus `$TWHOME$` variable); SyncTERM (ripper.c:13687) - not observed in the RIPtel demo corpus._

_Move cursor to upper-left corner of Text Window_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `H`      |
| **Arguments** | \<none\> |

**Format:** `!|H` **Example:** `!|H`

**Attributes used:** none

This command positions the text cursor to the upper-left corner in the TTY Text Window, if it is active. This is equivalent to the ANSI command `ESC[1;1H`.

## RIP_ERASE_EOL

_Evidence: 2.00a4; HLP (`RIP_EraseEOL`); SyncTERM (ripper.c:13426) - not observed in the RIPtel demo corpus._

_Erase current line from cursor to end of line_

|               |          |
| ------------- | -------- |
| **Level**     | 0        |
| **Command**   | `>`      |
| **Arguments** | `<none>` |

**Format:** `!|>` **Example:** `!|>`

**Attributes used:** Back Color, Base Math (N/A)

This command will erase the current text line in the TTY text window from the current cursor location (inclusive) to the end of the line. The erased region is filled with the current graphics background color. This differs from the ANSI command `ESC[K` which clears the area with the current ANSI background color.

The corpus never uses it, but a `$TWERASEEOL$` command-variable equivalent exists in the RIPtel help. _Evidence: HLP._

## Overlapping Windows and Viewports

_Evidence: 2.00a4._

Multiple text windows and viewports may overlap freely, and no compositing occurs - everything is just pixels on the screen. Draw a circle across a text window and then scroll the window, and part of the circle scrolls with it; text written where two windows overlap is simply graphics on top of the other window. RIPscrip preserves no record of _what_ drew a pixel; the final screen state is the only truth. The full inherited discussion is in [1.3 World View & Virtual Canvas](1.3-world-view-virtual-canvas.md#viewports-and-text-windows---overlapping-issues); mouse regions are the one place ordering matters - overlapping regions are scanned most-recent-first on a click.

---

[◀ Prev: 1.3 World View & Virtual Canvas](1.3-world-view-virtual-canvas.md) · [Contents](README.md) · [Next: 2.0 Color Modes & Palettes ▶](2.0-color-modes-and-palettes.md)
